--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,120 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  margin: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-align: center;
+  align-items: center;
+  min-height: 100vh;
+  font-size: 500%;
+  background: rgb(0,212,255);
+  background: linear-gradient(90deg, rgba(0,212,255,1) 54%, rgba(9,9,121,1) 100%, rgba(2,0,36,1) 100%);
   color: white;
+  font-family: sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  margin: 0;
+  margin-bottom: .5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.input {
+  padding: .25rem;
+  width: 10rem;
+  padding: 20px;
+}
+
+select {
+  margin-left: .5rem;
+  padding: 20px;
+}
+
+.input,select {
+  position: relative;
+  left: 110%;
+}
+
+
+
+.equals {
+  font-weight: bold;
+  font-size: 6rem;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 479px){ 
+  body{
+    font-size: 37px;
   }
-  to {
-    transform: rotate(360deg);
+  .heading {
+    padding-bottom: 3rem;
   }
+
+  .input {
+    margin-left: -9rem;
+    width: 120%;
+  }
+
+  .select {
+    width: 52%;
+  }
+
+
+ }
+
+@media only screen and (min-width: 480px) and (max-width: 767px){  
+  body{
+    font-size: 50px;
+  }
+  
+  .input{
+    width: 100%;
+    margin-left: -8rem;
+  }
+
+  .select {
+    width: 40%;
+  }
+
+  .heading {
+    font-size: 35px;
+    padding-bottom: 20px;
+  }
+
+  .equals {
+    margin-left: -1px;
+  }
+
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px){ 
+  body {
+    font-size: 50px;
+  }
+  .heading {
+    margin-bottom: 30px;
+  }
+
+  .input {
+    margin-left: -70px;
+  }
+  
+  .equals {
+    margin-left: 70px;
+  }
+
+ }
+
+@media only screen and (min-width: 992px){
+
+  body {
+    font-size: 70px;
+  }
+
+  .heading {
+    margin-bottom: 30px;
+  }
+
+  .equals {
+    margin-left: 100px;
+  }
+
 }
